# FoolFLACenc

./: .gitignore  CMakeLists.txt  bitstream.hpp  buffer.hpp  decode_flac.cpp  dump_flac.cpp  encode_flac.cpp  flac_struct.hpp  flac_struct_print.cpp  flac_struct_read.cpp  hash.cpp  hash.hpp  main.cpp  utility.cpp  utility.hpp
flacutil/: CMakeLists.txt  buffer.hpp  file.cpp  file.hpp  flac_decode.cpp  flac_decode.hpp  flac_encode.cpp  flac_encode.hpp  flac_struct.hpp  flac_struct_read.cpp  flac_struct_write.cpp  hash.hpp  utility.hpp  variant.hpp
